--- a/css/slyles.css
+++ b/css/slyles.css
@@ -474,3 +474,39 @@ margin-left: calc(-1 * var(--cardset-gap));
 }
 
 /* icon */
+.icon-box {
+    display: flex;
+    flex: content;
+    justify-content: center;
+    background-color: var(--color-button);
+    width: 270px;
+    height: 120px;
+    margin-bottom: 30px;
+    border: 1px solid transparent;
+    border-radius: var(--box-radius);
+    box-shadow: 0px 4px 4px;
+}
+.icon {
+    background-color: var(--color-button);
+    width: 70px;
+    height: 70px;
+    background-position: center;
+    margin-top: 25px;
+}
+.icon-header-envelope {
+    width: 16px;
+    height: 12px;
+    fill: var(--color-text);
+    margin-right: 10px;
+}
+.header-list:hover .icon-header-envelope {
+    fill: var(--color-blue);
+}
+.icon-header-smartphhone  {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+}
+.header-list:hover .icon-header-smartphhone {
+    fill: var(--color-blue);
+}
