--- a/css/slyles.css
+++ b/css/slyles.css
@@ -365,6 +365,10 @@ address {
     letter-spacing: 0.06em;
     margin-bottom: 4px;
 }
+.product-link {
+    text-decoration: none;
+    
+}
 .type {
     font-family: 'Roboto', sans-serif;
         font-size: 16px;
@@ -471,7 +475,12 @@ margin-left: calc(-1 * var(--cardset-gap));
     margin-top: 30px;
     background-color: var(--color-main);
 }
-
+.item-app:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.item-app:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .app-content {
     padding-top: 20px;
     padding-right: 24px;
@@ -501,10 +510,14 @@ margin-left: calc(-1 * var(--cardset-gap));
 }
 .icon {
     background-color: var(--color-button);
-    width: 70px;
-    height: 70px;
-    background-position: center;
     margin-top: 25px;
+    margin-left: 100px;
+    /* align-items: center; */
+    /* justify-content: center; */
+   
+}
+.icon-item {
+    background-position: 100px 25px;
 }
 .icon-header-envelope {
     width: 16px;
@@ -580,14 +593,16 @@ margin-left: calc(-1 * var(--cardset-gap));
 }
 .icon-client-item {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
+    
 }
 .icon-client {
     display: flex;
     flex: content;
     justify-content: center;
     align-items: center;
+    background-position: center;
     /* width: 100%;
     height: 100%; */
     width: 170px;
@@ -611,6 +626,7 @@ margin-left: calc(-1 * var(--cardset-gap));
     display: flex;
     justify-content: center;
     align-items: center;
+    background-position: center;
 }
 .footer-container {
     display: flex;
